# sgdk-template-project

./: .gitignore  .gitmodules  CMakeLists.txt  package.json  readme.md  tsconfig.json
.github/workflows/: branch-build.yml  master-build.yml
res/: resources.json
src/: main.c
src/tests/: test.c  test.h
